Disabled CSRF for now, because we are not using it anywhere else too.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Security/login.html.twig
@@ -56,7 +56,7 @@
                             <a href="{{ path('pelagos_app_ui_account_forgotusername') }}">Forgot Your Username?</a>
                         </span>
                     </div>
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                    {# <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"> #}
                     <div class="row btn-row">
                     <input class="btn-submit form-submit" id="edit-submit" name="op" value="LOGIN" accesskey="l" type="submit">
                     <input class="btn-reset" name="reset" accesskey="c" value="CLEAR" type="reset">
